--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -31,3 +31,23 @@
 abbr[title] {
     text-decoration: none;
 }
+
+.event-scroller:before {
+    content:'';
+    top: 3rem;
+    left: 0;
+    height: 40px;
+    right: 0;
+    background: linear-gradient(to bottom, rgba(251, 251, 251, 1) 0%, rgba(251, 251, 251, 0) 100%);
+    position: fixed;
+}
+
+.event-scroller:after {
+    content:'';
+    bottom: 0;
+    left: 0;
+    height: 40px;
+    right: 0;
+    background: linear-gradient(to top, rgba(251, 251, 251, 1) 0%, rgba(251, 251, 251, 0) 100%);
+    position: fixed;
+}
