feat(searchBar): Add !important on value to override tailwind css

--- a/src/components/SearchBar/searchBar.css
+++ b/src/components/SearchBar/searchBar.css
@@ -1,9 +1,9 @@
 .pills:checked + .label-pills {
-    background-color: #667eea;
+    background-color: #667eea !important;
     color: white !important;
 }
 
 .pills:checked + .label-pills:hover {
-    background-color: #4c51bf;
+    background-color: #4c51bf !important;
     color: white !important;
 }
