feat(searchBar): Add active state when checked

--- a/src/components/SearchBar/searchBar.css
+++ b/src/components/SearchBar/searchBar.css
@@ -7,3 +7,8 @@
     background-color: #4c51bf !important;
     color: white !important;
 }
+
+.pills:checked + .label-pills:active {
+    background-color: white !important;
+    color: #667eea !important;
+}
