--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,3 +1,12 @@
+.search-bar > .ant-select-selector {
+    border-radius: 9999px !important;
+    border: none !important;
+    color: white !important;
+    --bg-opacity: 1 !important;
+    background-color: #7f9cf5 !important;
+    background-color: rgba(127, 156, 245, var(--bg-opacity)) !important;
+}
+
 .pills:checked + .label-pills {
     background-color: #667eea !important;
     color: white !important;
