--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -55,3 +55,8 @@ abbr[title] {
     background: linear-gradient(to top, rgba(251, 251, 251, 1) 10%, rgba(251, 251, 251, 0) 100%);
     position: fixed;
 }
+
+
+.ant-modal-content, .ant-modal-header{
+    border-radius: 0.25rem !important;
+}
