feat(events): finish modal content

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -60,3 +60,7 @@ abbr[title] {
 .ant-modal-content, .ant-modal-header{
     border-radius: 0.25rem !important;
 }
+
+.ant-modal-body {
+    padding: 10px 24px 24px !important;
+}
