--- a/src/components/Common/ImagePicker.css
+++ b/src/components/Common/ImagePicker.css
@@ -1,9 +1,18 @@
-div.ant-upload {
+.avatar-uploader div.ant-upload {
     display: flex !important;
     height: 130px !important;
     width: 130px !important;
     overflow: hidden;
     border-radius: 9999px !important;
+}
+
+.cover-uploader div.ant-upload {
+    margin-right: 0 !important;
+    display: flex !important;
+    height: 100% !important;
+    width: 100% !important;
+    overflow: hidden;
+    border: none !important;
 }
 
 span.ant-upload {
