--- a/src/components/Common/ImageOverlay.css
+++ b/src/components/Common/ImageOverlay.css
@@ -2,7 +2,7 @@
     background-color:#000;
 }
 
-.image-display:hover img {
+.image-display:hover div {
     opacity: 0.5;
 }
 
@@ -11,14 +11,12 @@
 }
 
 .image-options {
+    opacity: 0;
     top: 45%;
     left: 50%;
-    z-index: 10;
-    white-space: nowrap;
     -webkit-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
-    opacity: 0;
     -webkit-transition: all .3s;
     transition: all .3s;
 }
