--- a/src/pages/default/discovery/Discovery.css
+++ b/src/pages/default/discovery/Discovery.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 407px) {
-    .xsgrid {
+    div.xsgrid {
         display: grid !important;
         gap: 0.75rem/* 12px */ !important;
         grid-template-columns: unset !important;
