feat(calendar): redesign calendar for mobile

--- a/src/components/Calendar/SideCalendar.css
+++ b/src/components/Calendar/SideCalendar.css
@@ -1,3 +1,19 @@
-#side-cal .react-calendar {
+.rbc-time-view .rbc-row {
+    min-height: unset !important;
+}
+.rbc-events-container {
+    margin-right: 2px !important;
+}
+.rbc-time-header-content, .rbc-day-slot .rbc-time-slot, .rbc-header, .rbc-time-view, .rbc-time-content, #side-cal .react-calendar {
     border: none !important;
+}
+.rbc-timeslot-group {
+    min-height: calc(100vh / 24 - 50px / 24) !important;
+}
+.rbc-time-header {
+    position: sticky;
+}
+
+.rbc-time-content {
+    @apply scrollbar-none;
 }
