--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,9 @@
     overflow-wrap: break-word !important;
     word-break: break-word !important;
 }
-.react-transform-component {
+/* .react-transform-component {
     will-change: transform !important;
-}
+} */
 
 /********/
 .rbc-calendar > div {
