feat(student / clubs): new UI for clubs members view and student clubs view

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 .overflow-y-overlay {
     overflow-y: overlay !important;
+    scrollbar-gutter: stable;
 }
 .break-words {
     overflow-wrap: break-word !important;
