--- a/src/index.css
+++ b/src/index.css
@@ -175,5 +175,7 @@ abbr[title] {
 /********/
 
 * {
-    touch-action: pan-x pan-y
+    touch-action: pan-x pan-y;
+    user-drag: none;
+    app-region: no-drag;
 }
